extends Node2D


func _ready():
	pass # Replace with function body.


func _on_Button_home_pressed():
	pass # Replace with function body.


func _on_Button_books_pressed():
	pass # Replace with function body.


func _on_Button_cars_pressed():
	pass # Replace with function body.


func _on_Button_tshirt_pressed():
	get_tree().change_scene("res://Scenes/store_t-shirt.tscn")


func _on_Button_pets_pressed():
	get_tree().change_scene("res://Scenes/store_pets.tscn")


func _on_Button_residence_pressed():
	get_tree().change_scene("res://Scenes/store_residence.tscn")


func _on_Button_exit_pressed():
	get_tree().change_scene("res://Scenery/bedroom.tscn")


func _on_Button_house_1_pressed():
	pass # Replace with function body.


func _on_Button_house_2_pressed():
	pass # Replace with function body.


func _on_Button_house_3_pressed():
	pass # Replace with function body.


func _on_Button_house_4_pressed():
	pass # Replace with function body.
